fixed z-index

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -96,7 +96,7 @@ body{
 
 .btn-toggle{
     border: none;
-    padding: 10px;
+    padding: 12px;
 }
 
 // Modal
